@@ -87,11 +87,6 @@ if ($submit) {
 	// If authenetication was valid then we'll set the users admin flag and redirect to the previous page
 	if ($valid and !$form->has_errors()) {
 //		header("Cache-Control: no-cache, must-revalidate");
-		// assign the session a new SID
-		$cms->session->delete_session();
-		$cms->session->sid($cms->session->generate_sid());
-		$cms->session->send_cookie($cms->session->sid());
-		$cms->session->key('');
 		// enable the session admin flag
 		$cms->session->is_admin(1);
 		// make sure the user is actually marked online as well
